* Version 1.1.x
  - Truncation
  - Two-stage additive gamma survival model. Additive random effects for two-stage survival
    model via pairwise composite likelihood. Simulation of family ace survival model. Function
    for computing Kendall's tau for pairs with additive gamma random effects model via simulations.
  - Two-stage additive gamma binomial model. Additive random effects for binomial model
    via pairwise composite likelihood. Simulation of family ace model. 
    Function for computing pairwise concordance for for pairs with additive gamma random effects model.
  - Updated divide.conquer
  - Extra unit tests
  - force.same.cens
  -

* Version 1.1.1 <2015-05-27 Wed>
  - Support for left-truncation 

* Version 1.1.0 <2015-02-16 Mon>
  - fast.approx with 'type' argument
  - scoreMV
  - lifetable updated and new survpois function (piecewise constant
    hazard)

* Version 1.0.0 <2014-11-18 Tue>
  - New functions biprobit.time, binomial.twostage.time.
    Automatically samples time points (approximately equidistant) up to
    last double jump time. Intial support for left truncation.
    contrast argument added to biprobit.time.
  - ipw removed (from namespace)
  - biprobit optimized for tabular data (non-continuous
    covariates). Regression design for dependence parameter (tetrachoric
    correlation) now possible.
  - predict method implemented for biprobit
  - arc-sinus transformation used for probability estimates
  - updated output of bptwin with relative recurrence risk + log-OR estimates
  - iid method for bptwin (influence function)
  - survival probabilities and start and end of intervals added to
    lifetable
  - new function 'jumptimes' for extracting jump times and possibly sample (equidistant)
  - fast.pattern updated to handle more than two categories
  - demos added to the mets package
  - divide.conquer function, folds function

* Version 0.2.8 <2014-05-07 Wed>
  - Normal orthant probabilities via 'pmvn' (vectorized)   