@@ -89,7 +89,7 @@ S3method(vcov,twinlm)
 export(CCbinomial.twostage)
 export(ClaytonOakes)
 export(Dbvn)
-export(EVadGam)
+export(EVaddGam)
 export(Grandom.cif)
 export(aalenfrailty)
 export(ace.family.design)
